--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_centerVertical="true"
         android:layout_marginTop="142dp"
         android:text="TAP"
-        android:textColor="@color/green"
+        android:textColor="@color/darkgreen"
         android:textSize="75dp"
         android:textStyle="normal"
         android:typeface="normal" />
@@ -29,7 +29,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="74dp"
         android:text="SCREEN"
-        android:textColor="@color/green"
+        android:textColor="@color/darkgreen"
         android:textSize="35dp" />
 
     <TextView
@@ -39,7 +39,7 @@
         android:layout_alignLeft="@+id/textViewScreen"
         android:layout_below="@+id/textViewScreen"
         android:text="TO TURN"
-        android:textColor="@color/green"
+        android:textColor="@color/darkgreen"
         android:textSize="21dp" />
 
     <TextView
@@ -61,9 +61,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="15dp"
-        android:background="@drawable/logowhite"
         android:onClick="openWebsite"
-        android:src="@drawable/logowhite"
-        android:visibility="visible" />
+        android:visibility="visible"
+        android:background="@drawable/logoyellow" />
 
 </RelativeLayout>
