changed to darkred text when flashlight is on

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
         android:layout_alignBottom="@+id/textViewToTurn"
         android:layout_alignRight="@+id/textViewScreen"
         android:text="@string/off"
-        android:textColor="@color/red"
+        android:textColor="@color/darkred"
         android:textSize="22dp"
         android:textStyle="bold" />
 
